<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="tokenSelectLabel">Select Token</string>
    <string name="tokenEntry">Token Entry</string>
    <string name="requestNewToken">Request New Token</string>
    <string name="manualToken">Enter Token Manually</string>
    <string name="restoreOldToken">Restore Previous Token</string>
    <string name="regionChoose">Choose your region</string>
    <string name="regionSelect">Region</string>
    <string name="addNewToken">Add A Token</string>
    <string name="authCode">Authentication Code</string>
    <string name="tokenSecret">Token Secret</string>
    <string name="tokenSerial">Token Serial</string>
    <string name="tokenRestore">Token Restore</string>
    <string name="main_no_items">No tokens yet!</string>
    <string name="generateToken">Generate New Token</string>
    <string name="restoreToken">Restore Old Token</string>
    <string name="save">Save</string>
    <string name="tokenSecretLabel">Secret</string>
    <string name="addAccountLabel">Add New Account</string>
    <string name="tokenSerialLabel">Serial</string>
    <string name="tokenRestoreLabel">Restore Code</string>
    <string name="accountNameText">Account Name</string>
    <string name="hello">Hello World, FlexAuth!</string>
    <string name="app_name">FlexAuth</string>
    <string name="create_table">CREATE TABLE accounts (id INTEGER PRIMARY KEY AUTOINCREMENT, name TEXT, serial TEXT, secret TEXT);</string>
    <string name="drop_table">DROP TABLE IF EXISTS accounts</string>
    <string name="invalid_data">Please fill out all fields.</string>
    <string name="pubkey">104890018807986556874007710914205443157030159668034197186125678960287470894290830530618284943118405110896322835449099433232093151168250152146023319326491587651685252774820340995950744075665455681760652136576493028733914892166700899109836291180881063097461175643998356321993663868233366705340758102567742483097</string>
    <string name="salt">0b92f5529e30138d2939bdf6e0c7b9bf3f4400442b33023ecab9fa3675d5e2f0843de0ea6e5f9397c5b2b2bd4bc1277fe619b10327a510013e8ac743391e6a1e</string>
    <string name="enroll_host">mobile-service.blizzard.com</string>
    <string name="enroll_uri">/enrollment/enroll.htm</string>
    <string name="enroll_url">http://m.%s.mobileservice.blizzard.com/enrollment/enroll.htm</string>
    <string name="delete_confirm">Are you sure you want to delete this token?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
