<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/ScrollView01"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@drawable/background">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_height="fill_parent" android:layout_width="fill_parent"
		android:orientation="vertical" android:padding="10dip"
		android:scrollbars="vertical"
		android:scrollbarAlwaysDrawVerticalTrack="true">
		<TextView android:layout_height="wrap_content" android:id="@+id/accountNameText"
			android:layout_width="fill_parent" android:layout_marginTop="10dip"
			android:text="@string/accountNameText"></TextView>
		<EditText android:layout_height="wrap_content" android:id="@+id/accountName"
			android:layout_width="fill_parent" android:imeOptions="actionNext" android:inputType="text"></EditText>
		<LinearLayout android:layout_weight="1"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:orientation="vertical" android:id="@+id/tokenForm" android:visibility="visible">
			<TextView android:layout_height="wrap_content" android:id="@+id/tokenSerialLabel"
				android:layout_marginTop="10dip" android:text="@string/tokenSerialLabel"
				android:layout_width="fill_parent"></TextView>
			<EditText android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:id="@+id/tokenSerial"
				android:maxLines="1" android:imeOptions="actionNext"></EditText>

			<TextView
			    android:id="@+id/tokenRestoreLabel"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="10dip"
			    android:text="@string/tokenRestoreLabel" >
</TextView>
			<EditText android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:id="@+id/tokenRestore"
				android:maxLines="1" android:imeOptions="actionNext"></EditText>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/tokenSecretLabel"
				android:layout_marginTop="10dip" android:text="@string/tokenSecretLabel"></TextView>
			<EditText android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:id="@+id/tokenSecret"
				android:textSize="8pt" android:imeOptions="actionDone" android:digits="ABCDEFabcdef01234567890"></EditText>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/regionSelect" android:id="@+id/regionLabel"></TextView>
			<Spinner android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:prompt="@string/regionChoose"
				android:id="@+id/regionSelect"></Spinner>
			<RelativeLayout android:id="@+id/RelativeLayout01"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginTop="20dp">

				<LinearLayout
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:gravity="right" 
     				android:layout_alignParentRight="true">"
					<Button android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:id="@+id/requestToken"
						android:text="@string/generateToken"
						android:onClick="generateToken" android:drawableLeft="@drawable/world_link" android:drawablePadding="10dp"></Button>
					<Button android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:id="@+id/restoreToken"
						android:text="@string/restoreToken"
						android:onClick="restoreOldToken" android:drawableLeft="@drawable/world_link" android:drawablePadding="10dp"></Button>
				</LinearLayout>
				<Button android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:layout_gravity="left"
					android:id="@+id/saveToken" android:text="@string/save" android:onClick="saveToken" android:drawableLeft="@drawable/disk" android:drawablePadding="10dp"></Button>
			</RelativeLayout>
		</LinearLayout>
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:orientation="vertical"
			android:id="@+id/tokenTypeSelect" android:layout_marginTop="20dp">
			<TextView android:id="@+id/TextView02" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/tokenEntry"></TextView>
			<Button android:id="@+id/Button02" android:text="@string/requestNewToken"
				android:layout_gravity="top|right" android:layout_width="fill_parent"
				android:drawableLeft="@drawable/world_link" android:layout_height="wrap_content"
				android:onClick="requestNewToken"></Button>
			<Button android:id="@+id/Button01" android:layout_height="wrap_content"
				android:text="@string/manualToken" android:layout_gravity="left|fill_horizontal"
				android:layout_width="fill_parent" android:drawableLeft="@drawable/pencil_add"
				android:onClick="newManualToken"></Button>
			<Button android:id="@+id/Button03" android:layout_height="wrap_content"
				android:text="@string/restoreToken" android:layout_gravity="left|fill_horizontal"
				android:layout_width="fill_parent" android:drawableLeft="@drawable/pencil_add"
				android:onClick="restoreToken"></Button>
		</LinearLayout>
	</LinearLayout>
</ScrollView>