<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@drawable/background" android:orientation="vertical" android:padding="25dp">
<TextView android:id="@+id/TextView01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:textColor="#ffffff" android:textSize="20dp" android:text="@string/authCode"></TextView><TextView android:text="@+id/TextView02" android:layout_height="wrap_content" android:layout_width="fill_parent" android:textStyle="bold" android:textColor="#ffffff" android:padding="10dp" android:drawablePadding="10dp" android:id="@+id/authCode" android:drawableLeft="@drawable/shield" android:background="#66000044"></TextView><TextView android:id="@+id/TextView01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/tokenSerial" android:textColor="#ffffff" android:textSize="20dp" android:layout_marginTop="20dp"></TextView>
<TextView android:text="@+id/TextView02" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/tokenSerialText" android:textStyle="bold" android:textColor="#ffffff" android:padding="10dp" android:drawableLeft="@drawable/key" android:drawablePadding="10dp" android:background="#66000044" android:longClickable="true"></TextView>
<TextView android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tokenSecret" android:textColor="#ffffff" android:layout_marginTop="20dp" android:textSize="20dp"></TextView>
<TextView android:text="@+id/TextView04" android:layout_height="wrap_content" android:id="@+id/tokenSecretText" android:textColor="#ffffff" android:textStyle="bold" android:layout_width="fill_parent" android:padding="10dp" android:drawableLeft="@drawable/lock" android:drawablePadding="10dp" android:background="#66000044" android:longClickable="true"></TextView>
</LinearLayout>
